sass/components/_images.scss
// main: ../main.scss

img {
  max-width: $img-size;
  max-height: $img-size;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#gallery {
  padding: $text_padding 5%;

  column-count: 1;
  row-gap: 10px;

  @media (min-width: $min-width) {
    column-count: 2;
  }
  @media (min-width: $tablet-size) {
    column-count: 3;
  }

  a {
    position: relative;
    z-index: 0;
    display: block;
    max-height: 100vh;
    overflow: hidden;
    margin-bottom: 10px;

    @media (min-width: $min-width) {
      margin-bottom: 20px;
    }

    img {
      display: block;
      width: 100%;
      height: auto;
      margin: 0 auto;
      max-width: 100%;
      max-height: 100%;
    }

    .image-description {
      position: absolute;
      padding: 20px;
      background: rgba(black, 0.6);
      bottom: 0;
      width: 100%;
      transform: translateY(15px);
      opacity: 0;
      transition: 0.25s ease-in-out;
      color: white;
      font-size: 20px;
    }

    @media (hover: hover) and (pointer: fine) {
      img {
        opacity: 1;
        filter: saturate(0.15);
        transition: 0.25s ease-in-out;
      }

      &:hover,
      &:focus {
        z-index: 5;
        img {
          opacity: 1;
          filter: saturate(1);
        }
        .image-description {
          transform: translateY(0);
          opacity: 1;
        }
      }
      &:focus {
        img {
          transform: scale(1.05);
        }
      }
    }
  }
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 30; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */

  /* Modal Content (Image) */
  .modal-content {
    margin: auto;
    display: block;
    width: 100%;
    max-width: 100%;
    max-height: 100%;

    @media (min-width: $min-width) {
      width: 80%;
    }
  }

  /* Caption of Modal Image (Image Text) - Same Width as the Image */
  #caption {
    margin: auto;
    display: block;
    width: 100%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
    
    @media (min-width: $min-width) {
      width: 80%;
    }
  }

  /* Add Animation - Zoom in the Modal */
  .modal-content,
  #caption {
    animation-name: zoom;
    animation-duration: 0.6s;
  }
}

@keyframes zoom {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}

/* The Close Button */
.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

